--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -44,7 +44,8 @@ html {
 }
 
 body {
-	font-family: "Roboto", sans-serif;
+	font-family: Raleway, sans-serif;
+	src: url("../font/PPMori-Regular.otf");
 	font-weight: 400;
 	line-height: 1.6;
 	color: var(--color-primary);
