--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -39,7 +39,12 @@
 	}
 
 	&__services {
-		height: 343vh;
+		height: 200vh;
+		padding: 10rem 0;
+	}
+
+	&__works {
+		height: 100vh;
 		padding: 10rem 0;
 	}
 }
