--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -67,6 +67,11 @@
 			box-shadow: 2px solid var(--color-primary-dark);
 		}
 	}
+
+	&__cta {
+		font-size: 2rem;
+		margin-top: 2.5rem;
+	}
 }
 
 .heading {
@@ -76,24 +81,18 @@
 
 	&-hero {
 		text-transform: uppercase;
-		font-size: 15rem;
-		font-weight: 600;
-		display: flex;
+		font-size: 10rem;
+		font-weight: 700;
 		flex-direction: column;
 		z-index: 2;
-
-		&__1 {
-			align-self: flex-start;
-		}
-
-		&__2 {
-			transform: translateX(90rem);
-		}
+		font-family: "Lato", sans-serif;
+		line-height: 1.7;
+		letter-spacing: 5px;
 	}
 
 	&-secondary {
-		font-size: 4rem;
-		font-weight: 300;
+		font-size: 4.2rem;
+		font-weight: 400;
 	}
 
 	&-primary {
@@ -253,7 +252,10 @@
 	grid-template-areas:
 		". a"
 		"b ."
-		". c";
+		". c"
+		"d ."
+		". e"
+		"f .";
 	width: 160rem;
 	row-gap: 20rem;
 	z-index: 2;
@@ -270,6 +272,15 @@
 	}
 	&3 {
 		grid-area: c;
+	}
+	&4 {
+		grid-area: d;
+	}
+	&5 {
+		grid-area: e;
+	}
+	&6 {
+		grid-area: f;
 	}
 }
 
@@ -346,4 +357,87 @@
 .card-footer a img {
 	width: 2rem;
 	height: 2rem;
+}
+
+////////////////////////////////
+
+.section__team {
+	padding: 4.8rem;
+	min-height: 100vh;
+	color: black;
+	overflow-x: hidden;
+	box-sizing: border-box;
+}
+.flex-container {
+	display: flex;
+	align-items: space-between;
+	justify-content: center;
+}
+
+.heading-team {
+	display: inline-block;
+	font-size: 6rem;
+	font-weight: 200;
+	border-bottom: 1px solid var(--color-primary-light);
+}
+
+.team__wrapper {
+	flex: 1;
+}
+
+.team {
+	margin: 2rem 0;
+}
+
+.team__name {
+	font-size: 6rem;
+	margin: 0;
+	opacity: 0.4;
+	transition: 0.3s ease;
+	text-transform: uppercase;
+	font-weight: 300;
+}
+
+.team__designation {
+	font-size: 2.5rem;
+	margin: 0.5rem 0 0;
+	opacity: 0.3;
+	transition: 0.3s ease;
+}
+
+.team.active .team__name,
+.team.active .team__designation {
+	opacity: 1;
+	color: var(--color-primary-dark);
+	transform: translateX(10px);
+	font-weight: 700;
+}
+
+.team__image {
+	flex: 1;
+	display: flex;
+	align-items: flex-end;
+	justify-content: flex-end;
+	position: relative;
+}
+
+.team__image img {
+	padding: 1rem;
+	max-width: 50%;
+	border-radius: none;
+	position: absolute;
+	opacity: 0;
+	transform: scale(0.95);
+	transition: opacity 0.5s, transform 0.5s;
+	background-image: linear-gradient(
+		to bottom right,
+		var(--color-primary-light),
+		var(--color-primary-dark)
+	);
+}
+
+.team__image img.active {
+	opacity: 1;
+	transform: scale(1);
+	z-index: 1;
 }
