--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -45,13 +45,20 @@
 
 	&__works {
 		position: relative;
-		height: 250vh;
+		height: 490vh;
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		overflow: hidden;
 		flex-direction: column;
 	}
+
+	// &__team {
+	// 	height: 100vh;
+	// 	width: 100%;
+	// 	position: relative;
+	// 	padding: 4rem;
+	// }
 }
 
 .hero {
