--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,15 @@ body {
   justify-content: center;
   overflow: hidden;
   flex-direction: column;
+  margin-top: 25vh;
+  padding-top: 20vh;
+}
+.section__team {
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  padding: 4rem;
+  margin-top: 70rem;
 }
 
 .hero {
