--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -51,14 +51,17 @@
 		justify-content: center;
 		overflow: hidden;
 		flex-direction: column;
+		margin-top: 25vh;
+		padding-top: 20vh;
 	}
 
-	// &__team {
-	// 	height: 100vh;
-	// 	width: 100%;
-	// 	position: relative;
-	// 	padding: 4rem;
-	// }
+	&__team {
+		height: 100vh;
+		width: 100%;
+		position: relative;
+		padding: 4rem;
+		margin-top: 70rem;
+	}
 }
 
 .hero {
