--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -82,4 +82,5 @@ body {
 	border-radius: 50%;
 	z-index: 9999;
 	pointer-events: none;
+	transition: background-color 0.3s ease, border-color 0.3s ease;
 }
