--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -84,3 +84,137 @@ body {
 	pointer-events: none;
 	transition: background-color 0.3s ease, border-color 0.3s ease;
 }
+
+@media (min-width: 170rem) {
+	.heading-hero {
+		font-size: 10rem;
+	}
+
+	.hero {
+		padding: 0;
+	}
+}
+
+@media (min-width: 768px) {
+	.hero__textbox-2 {
+		width: 100%;
+		margin-top: 5rem;
+	}
+}
+
+@media (max-width: 680px) {
+	.section {
+		&__hero {
+			padding: 0;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+		}
+
+		&__services {
+			padding: 0;
+		}
+
+		&__works {
+			margin: 0 !important;
+			padding: 0 !important;
+		}
+	}
+
+	.heading-wrapper {
+		padding: 2rem !important;
+	}
+
+	.service__item {
+		padding: 1.8rem !important;
+	}
+}
+
+@media (max-width: 180rem) {
+	.service__img {
+		width: 40vw;
+	}
+}
+
+@media (max-width: 1024px) {
+	.work-title-wrapper {
+		transform: none !important;
+		height: auto !important;
+		margin-top: -10rem !important;
+	}
+	.works-grid {
+		grid-template-areas:
+			"a"
+			"b"
+			"c"
+			"d"
+			"e"
+			"f" !important;
+		width: 70vw !important;
+		row-gap: 10rem !important;
+	}
+
+	.section__services {
+		height: auto !important;
+		padding: 5rem 0 !important;
+	}
+
+	.section__works {
+		height: auto !important;
+		padding: 10rem !important;
+		margin-top: 30rem !important;
+	}
+
+	.flex-container {
+		gap: 15rem;
+	}
+
+	.team__image {
+		align-items: center;
+		justify-content: center;
+	}
+}
+
+@media (max-width: 768px) {
+	.testimonials-text__container {
+		grid-template-columns: 1fr !important;
+		grid-template-rows: 1fr 1fr;
+	}
+
+	.section__testimonials {
+		height: auto !important;
+		padding: 5rem !important;
+		margin-top: 5rem !important;
+	}
+}
+
+@media (max-width: 768px) {
+	@media (max-width: 768px) {
+		.footer__container,
+		.sticky__area,
+		.sticky__area__2 {
+			height: auto !important; /* let content define height */
+			position: static !important; /* cancel sticky */
+			top: auto !important;
+		}
+
+		.footer {
+			height: auto !important;
+			padding: 3rem 2rem;
+			margin-top: 5rem;
+			text-align: center;
+		}
+
+		.footer__grid {
+			grid-template-columns: 1fr !important;
+			gap: 2rem;
+			text-align: center;
+		}
+
+		.footer__title {
+			font-size: 3rem;
+			margin-bottom: 2rem;
+		}
+	}
+}
