--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -16,7 +16,8 @@
 
 .section {
 	&__hero {
-		height: 90vh;
+		height: auto;
+		min-height: 90vh;
 		padding: 4.8rem 8.2rem;
 		overflow: hidden;
 	}
@@ -83,10 +84,11 @@
 	position: relative;
 
 	&__textbox-2 {
-		width: 100rem;
+		width: 70vw;
 		text-align: center;
-		position: absolute;
-		left: 13rem;
+		position: relative;
+		left: 0;
+		margin-top: 2rem;
 	}
 }
 
