--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -122,7 +122,7 @@
 
 .intro {
 	&__logo {
-		max-width: 20%;
+		max-width: 40%;
 		height: auto;
 		display: inline-block;
 		object-fit: contain;
@@ -256,9 +256,10 @@
 		"d ."
 		". e"
 		"f .";
-	width: 160rem;
+	width: 100%;
 	row-gap: 20rem;
 	z-index: 2;
+	place-items: center;
 }
 
 .work {
@@ -316,8 +317,9 @@
 .card-image img {
 	width: 100%;
 	height: 100%;
-	object-fit: cover;
 	display: block;
+	box-sizing: border-box;
+	object-fit: cover;
 	outline: 5px solid var(--color-primary-dark);
 }
 
