--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -45,15 +45,10 @@
 	}
 
 	&__works {
-		position: relative;
-		height: 490vh;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		overflow: hidden;
-		flex-direction: column;
-		margin-top: 25vh;
-		padding-top: 20vh;
+		min-height: 100vh;
+		padding: 8rem 2rem;
+		margin: 0 auto;
+		overflow: visible;
 	}
 
 	&__team {
@@ -61,7 +56,7 @@
 		width: 100%;
 		position: relative;
 		padding: 4rem;
-		margin-top: 70rem;
+		margin-top: 100rem;
 	}
 
 	&__testimonials {
